// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add cli: files 1`] = `
Array [
  ".editorconfig",
  ".gitattributes",
  ".gitignore",
  "LICENSE",
  "README.md",
  "circle.yml",
  "cli.js",
  "index.js",
  "package.json",
]
`;

exports[`add cli: package.json 1`] = `
Object {
  "bin": "cli.js",
  "dependencies": Object {
    "cac": "^4.0.0",
  },
}
`;

exports[`add coverage: circle.yml 1`] = `
"version: 2
jobs:
  build:
    docker:
      - image: circleci/node:latest
    branches:
      ignore:
        - gh-pages # list of branches to ignore
        - /release\\\\/.*/ # or ignore regexes
    steps:
      - checkout
      - restore_cache:
          key: dependency-cache-{{ checksum \\"yarn.lock\\" }}
      - run:
          name: install dependences
          command: yarn
      - save_cache:
          key: dependency-cache-{{ checksum \\"yarn.lock\\" }}
          paths:
            - ./node_modules
      - run:
          name: test
          command: yarn test:cov
      - run:
          name: upload coverage
          command: bash <(curl -s https://codecov.io/bash)
"
`;

exports[`add coverage: files 1`] = `
Array [
  ".editorconfig",
  ".gitattributes",
  ".gitignore",
  "LICENSE",
  "README.md",
  "circle.yml",
  "index.js",
  "package.json",
  "test/index.test.js",
]
`;

exports[`add unit test: files 1`] = `
Array [
  ".editorconfig",
  ".gitattributes",
  ".gitignore",
  "LICENSE",
  "README.md",
  "circle.yml",
  "index.js",
  "package.json",
  "test/index.test.js",
]
`;

exports[`add unit test: package.json 1`] = `
Object {
  "devDependencies": Object {
    "eslint-config-rem": "^3.0.0",
    "jest-cli": "^22.1.4",
    "xo": "^0.18.0",
  },
  "scripts": Object {
    "lint": "xo",
    "test": "npm run lint && jest",
  },
}
`;

exports[`support poi: files 1`] = `
Array [
  ".editorconfig",
  ".gitattributes",
  ".gitignore",
  "LICENSE",
  "README.md",
  "circle.yml",
  "example/index.js",
  "package.json",
  "poi.config.js",
  "src/index.js",
]
`;

exports[`support poi: package.json 1`] = `
Object {
  "devDependencies": Object {
    "bili": "^3.3.0",
    "eslint-config-rem": "^3.0.0",
    "poi": "next",
    "xo": "^0.18.0",
  },
  "scripts": Object {
    "build": "bili",
    "build:example": "poi build",
    "example": "poi dev",
    "lint": "xo",
    "prepublishOnly": "npm run build",
    "test": "npm run lint && echo 'no tests!'",
  },
}
`;

exports[`use defaults 1`] = `
Array [
  ".editorconfig",
  ".gitattributes",
  ".gitignore",
  "LICENSE",
  "README.md",
  "circle.yml",
  "index.js",
  "package.json",
]
`;
